@@ -18,6 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.CorsUtils;
 import java.util.Collections;
+import java.util.List;
 
 
 @Configuration
@@ -68,7 +69,7 @@ public class SecurityConfig  {
             CorsConfiguration config = new CorsConfiguration();
             config.setAllowedHeaders(Collections.singletonList("*"));
             config.setAllowedMethods(Collections.singletonList("*"));
-            config.setAllowedOriginPatterns(Collections.singletonList("http://localhost:3000")); //️ 허용할 origin
+            config.setAllowedOriginPatterns(List.of("*","http://localhost:3000","https://api.g1int.com")); //️ 허용할 origin
             config.setAllowCredentials(true);
             return config;
         };
